--- a/homepage.css
+++ b/homepage.css
@@ -47,8 +47,7 @@ button a:hover{
 }
 
 .textnform{
-    position: relative;
-    top:14%;
+    margin-top:7%;
     color: #fff;
     text-align: center;
 }
@@ -72,6 +71,11 @@ h1, h2{
     font-size: 1.2rem;
     font-weight:400;
     margin-bottom: 15px;
+ }
+ form{
+    display: flex;
+    margin: 0 25%;
+    justify-items: center;
  }
 
  input[type=email]{
@@ -290,3 +294,155 @@ a:hover{
 .one a:hover{
     text-decoration: underline;
 }
+
+
+@media only screen and (max-width:500px){
+    *{
+        margin:0;
+    }
+    body{
+        width:100%;
+        overflow-x: hidden;
+    }
+
+    .top{
+        margin: 0 40px 0 40px;
+        justify-content: space-around;
+    }
+    img{
+        margin-left: 50px;
+    }
+
+    button{
+        margin-right:50px;
+        padding: 0px 32px;
+        height:40px;
+        font-size: 15px;
+    }
+
+.textnform{
+    width:90%;
+    margin:15% auto 0 auto;
+}
+
+h1{
+    font-size: 2rem;
+}
+
+input[type=email]{
+    width:400px;
+    margin:5px auto 15px auto;
+}
+
+input[type=button]{
+    width:150px;
+    font-size:1.2rem;
+}
+
+form{
+    margin: auto;
+    display:block
+}
+
+.tv-display{
+    border-top: solid black ;
+    display:block;
+    height:80vh;
+}
+
+.text h1, .shows h1, .watch h1, .children h1{
+    font-size: 2rem;
+    text-align: center;
+    margin: 0;
+}
+
+.text p, .shows p, .watch p, .children p{
+    font-size: 1.2rem;
+    text-align: center;
+    margin: 0;
+}
+
+.tv img{
+    width:350px;
+    margin-left:15%;
+    position:relative;
+}
+
+.tv video{
+    width:300px;
+    position: absolute;
+    right:20%;
+    top:110%;
+}
+.shows{
+    height:80vh;
+    display:block;
+}
+
+.shows img{
+    width:400px;
+    height: 300px;
+    margin-left:8%;
+}
+.boxshot img{
+    width:60px;
+    height:60px;
+}
+.boxshot{
+    top:70%;
+    left:20%;
+    width:270px;
+    height:70px;
+}
+.watch{
+    height: 25vh;
+}
+
+.shows-text{
+    margin: auto;
+}
+
+.children{
+    display:block;
+    height:80vh;
+}
+
+.children img{
+    width:300px;
+    height:250px;
+}
+.children-text{
+    margin: auto;
+}
+.summary-box h1{
+    font-size: 1.7rem;
+
+}
+.summary-box{
+    width:100%;
+    margin: 0;
+    height:120vh
+}
+
+summary{
+    font-size: 1.3rem;
+    width:100%;
+    padding: 10px;
+    margin-bottom:5px;
+}
+.summary p{
+    font-size: 1.2rem;
+}
+
+.summary-box p{
+    visibility: hidden;
+}
+
+.form{
+    margin-left:10%;
+}
+.form-button{
+    margin-left: 25%;
+}
+}
+
