--- a/signup.css
+++ b/signup.css
@@ -42,7 +42,7 @@ section{
 }
 
 h1{
-    font-size:2.3rem;
+    font-size:2.2rem;
     color: rgba(50,50,50);
     padding-bottom:12px;
     margin-top: 5px;
@@ -115,3 +115,29 @@ footer a{
     text-decoration: none;
 }
 
+@media only screen and (max-width:500px){
+    body{
+        overflow-x: hidden;
+    }
+
+    .top{
+        height:auto;
+    }
+    img{
+        width:70px;
+    }
+    .top a{
+        font-size: 1rem;
+        margin: 0;
+    }
+
+    section{
+        width:400px;
+    }
+
+    footer{
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-left: -10%;
+    }
+}
