--- a/signin.css
+++ b/signin.css
@@ -177,7 +177,7 @@ footer a:hover{
 
     footer{
         margin-top: -100px;
-        display: block;
+        display: flex;
         height:35vh;
     }
 
